Add demo for Multilog SQL